tests/error/linear_region_unconsumed.vow
// TEST: error-code RegionLinear
module LinearRegionUnconsumed

linear struct Handle {
    fd: i64,
}

fn main() -> i64 {
    let h: Handle = Handle { fd: 1 };
    0
}
